--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-nfl-logos": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
